--- a/bed_management.html
+++ b/bed_management.html
@@ -126,8 +126,8 @@
         <div class="logo-container">
             <img src="./logoo.png" alt="Logo"> <!-- Logo image -->
         </div>
-        <a href="index.html">Home</a>
-        <a href="dashboard.html">Dashboard</a>
+        <a href="home.html">Home</a> <!-- Updated link -->
+        <a href="index.html">Dashboard</a> <!-- Updated link -->
         <a href="bed_management.html" class="active">Bed Management</a>
         <a href="profile.html">Profile</a>
     </div>
@@ -167,6 +167,3 @@
     </script>
 </body>
 </html>
-
-
-
