--- a/opd_management.html
+++ b/opd_management.html
@@ -169,8 +169,8 @@
         <div class="logo-container">
             <img src="./logoo.png" alt="Logo"> <!-- Logo image -->
         </div>
-        <a href="index.html">Home</a>
-        <a href="dashboard.html">Dashboard</a>
+        <a href="profile.html">Home</a>
+        <a href="index.html">Dashboard</a>
         <a href="bed_management.html">Bed Management</a>
         <a href="profile.html">Profile</a>
         <a href="opd_management.html" class="active">OPD Management</a>
