--- a/bed_management.html
+++ b/bed_management.html
@@ -15,7 +15,7 @@
         /* Sticky Navbar */
         .nav-container {
             display: flex;
-            justify-content: space-around; /* Ensures horizontal alignment */
+            flex-wrap: wrap;
             align-items: center;
             padding: 10px;
             background-color: #3D52A0; /* Dark blue color for the navigation bar */
@@ -25,6 +25,19 @@
             top: 0;
             width: 100%;
             z-index: 1000; /* Ensures it stays on top */
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            margin-right: auto; /* Pushes the logo to the leftmost side */
+        }
+
+        .logo-container img {
+            width: 50px; /* Adjusted logo size */
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 10px;
         }
 
         .nav-container a {
@@ -50,14 +63,14 @@
 
         h1 {
             text-align: center;
-            margin: 80px 0 20px; /* Added margin-top to ensure content doesn't overlap with the sticky nav */
+            margin: 120px 0 20px; /* Adjusted margin-top to prevent overlap with the sticky nav */
             color: #3D52A0; /* Dark blue color */
             font-size: 24px; /* Adjust font size for header */
         }
 
         .bed-container {
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Allow wrapping of bed categories */
             justify-content: center;
             margin: 0 20px; /* Adjust margin */
             box-sizing: border-box;
@@ -97,11 +110,9 @@
             margin-top: 10px;
         }
 
-        /* Media queries for mobile screens */
         @media (max-width: 768px) {
             .nav-container {
-                flex-direction: row; /* Ensure horizontal alignment */
-                justify-content: space-around;
+                flex-direction: column; /* Stack navigation items vertically */
                 align-items: center;
             }
 
@@ -111,7 +122,7 @@
             }
 
             .bed-category {
-                width: 90%; /* Increase width on smaller screens */
+                width: 90%; /* Increased width on smaller screens */
                 max-width: none; /* Remove max width restriction */
             }
 
@@ -121,6 +132,11 @@
         }
 
         @media (max-width: 480px) {
+            .logo-container img {
+                width: 40px; /* Smaller logo size */
+                height: 40px;
+            }
+
             .bed-category {
                 width: 100%; /* Full width on very small screens */
             }
@@ -139,6 +155,9 @@
 <body>
     <!-- Navigation Menu -->
     <div class="nav-container">
+        <div class="logo-container">
+            <img src="./logoo.png" alt="Logo"> <!-- Logo image -->
+        </div>
         <a href="home.html">Home</a>
         <a href="index.html">Dashboard</a>
         <a href="bed_management.html" class="active">Bed Management</a>
@@ -180,5 +199,3 @@
     </script>
 </body>
 </html>
-
-
