--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - MedTrack</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- FontAwesome CSS -->
     <style>
         /* Base Styles */
         body {
@@ -175,6 +176,48 @@
                 font-size: 16px; /* Adjust font size for blocks on smaller screens */
             }
         }
+
+        /* Voice Bot and Emergency Box Styles */
+        .voice-bot-box {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #1A4870;
+            color: #fff;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+            z-index: 1000;
+        }
+
+        .voice-bot-box i {
+            font-size: 24px;
+        }
+
+        .emergency-box {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background-color: #FF0000; /* Red color for emergency */
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            z-index: 1000;
+        }
+
+        .emergency-box i {
+            font-size: 20px;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -218,6 +261,15 @@
         </div>
     </div>
 
+    <!-- Voice Bot and Emergency Box -->
+    <div class="voice-bot-box">
+        <i class="fa fa-microphone"></i> <!-- FontAwesome microphone icon -->
+    </div>
+    <div class="emergency-box">
+        <i class="fa fa-exclamation-triangle"></i> <!-- FontAwesome emergency icon -->
+        Emergency
+    </div>
+
     <script>
         window.onscroll = function() {
             var header = document.getElementById('header');
@@ -234,5 +286,3 @@
     </script>
 </body>
 </html>
-
-
